--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </div>
             </div>
       
-            <div class="citation-section">
+            <!-- <div class="citation-section">
               <h2><i class="fas fa-quote-right"></i> Citation</h2>
               <div class="citation-box">
                 <p>Please cite our work as:</p>
@@ -204,7 +204,7 @@
                 </code>
                 <button class="copy-button" onclick="copyToClipboard('citation-text')">Copy</button>
               </div>
-            </div>
+            </div> -->
 
             <div class="github-section">
               <h2><i class="fab fa-github"></i> GitHub</h2>
@@ -212,7 +212,7 @@
                 <p>Check out our GitHub repository for usage instructions:</p>
                 <code id="github-code">
                   <pre>
-git clone https://github.com/yourusername/openspectro.git
+git clone https://github.com/OpenSpectro/openspectro.github.io.git
 cd openspectro
 pip install -r requirements.txt
 python main.py
