--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                 <code id="github-code">
                   <pre>
 git clone https://github.com/OpenSpectro/openspectro.github.io.git
-cd openspectro
-pip install -r requirements.txt
+cd openspectro.github.io
+conda env create -f environment.yml
 python main.py
                   </pre>
                 </code>
