--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
 git clone https://github.com/OpenSpectro/openspectro.github.io.git
 cd openspectro.github.io
 conda env create -f environment.yml
+conda activate spectro
 gunicorn main:app
                   </pre>
                 </code>
